Merge of buffix430, enhancements440, enhancements440pool branches
git-svn-id: http://svn.codehaus.org/esper/esper/trunk@2663 d91eb1b3-1215-0410-9718-d41490442091